--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,13 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+.java linguist-language=Java
+*.xml linguist-language=XML
+*.gradle linguist-language=Groovy
+
+# Specify the tools and dependencies used in the project
+*.gradle linguist-vendored
+*.jar linguist-vendored
+*.png binary
+*.jpg binary
+*.mp3 binary
+*.wav binary
