--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,4 @@
-# Auto detect text files and perform LF normalization
-* text=auto
-.java linguist-language=Java
+*.java linguist-language=Java
 *.xml linguist-language=XML
 *.gradle linguist-language=Groovy
 
