--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.java linguist-language=Java
-*.xml linguist-language=XML
-*.gradle linguist-language=Groovy
+*.java linguist-detectable=false
+*.kotlin linguist-detectable=true
+
